--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "098_mern_kontakt_manager",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js"
   },
   "author": "MKT",
   "license": "MIT",
