--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
